<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353232"
    android:backgroundTint="#353232"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="7dp">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#353232"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/contactBtn"
        app:layout_constraintEnd_toEndOf="@+id/calculadoraTV"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/calculadoraTV"
        app:layout_constraintTop_toTopOf="@+id/contactBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calculadoralogo"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculadoraTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="61dp"
        android:text="@string/calculadora"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/contactBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:text="@string/contacto"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/contactoTV"
        app:layout_constraintEnd_toEndOf="@+id/contactoTV"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/contactoTV"
        app:layout_constraintTop_toBottomOf="@+id/nombreTV"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#000000" />

    <TextView
        android:id="@+id/contactoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="244dp"
        android:text="@string/contacto"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nombreTV"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="428dp"
        android:text="@string/sergio"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="176dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>